--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   json_annotation: ^3.0.1
   http: ^0.12.0+4
-
+  webview_flutter: ^0.3.19+9
+  commons: ^0.7.5   
 
 dev_dependencies:
   flutter_test:
