--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -30,6 +30,7 @@ jobs:
     # Get flutter dependencies.
     - run: flutter pub get
     
+    - run: flutter clean
     # Statically analyze the Dart code for any errors.
     - run: flutter analyze .
     
